# dc-v2

./: .gitignore  .mcp.json  ARCHITECTURE-claude.html  ARCHITECTURE-claude.md  ARCHITECTURE.html  ARCHITECTURE.md  INTEGRATION-ANALYSIS-claude.html  INTEGRATION-ANALYSIS-claude.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: create-business-node.md  create-domain-node.md  create-product-node.md  import-discovery.md  inspect-bc2.md  kg-status.md  link-spine.md  lookup-notes.md  propose-influences.md  propose-skeleton.md  run-causal.md  validate-edge.md
app/kg-canvas/: package.json  vite.config.ts
data/: candidate_edges.rare_seeds.csv  chart_type_map.csv  chart_type_map.json  chart_types.csv  chart_types.json  compositional_edges.rare_seeds.csv  crossproduct_edges.rare_seeds.csv  discovered_edges.rare_seeds.csv  discovered_edges_cmiknn-gpu_tau3.rare_seeds.csv  discovered_edges_parcorr.rare_seeds.csv  metric_nodes.rare_seeds.json  metric_registry.rare_seeds.csv  model_edges.rare_seeds.csv  structural_edges.rare_seeds.csv  unique_metrics_catalog.rare_seeds.csv
docs/: active-campaign-platform-decomposition-claude.md  active-campaign-platform-decomposition-codex.md  active-campaign-platform-decomposition-v2-claude.md  active-campaign-platform-decomposition-v2-codex.md  causal-edge-gap-analysis-claude.md  final-schema-claude.html  final-schema-claude.md  graph-build-process.md  kg-integration-plan-claude.md  kg-skeleton-build-implementation.md  leaf-metrics.md  unique-metrics-and-ml-classification.md
docs/archive/: README.md  causal-edge-coverage-plan-claude.md  deterministic-edge-formation-codex.md  final-schema-codex.html  final-schema-codex.md  (+7 more)
harness/: .env.example
harness/api/: sse.py  (+2 more)
schema-iterations/: finalised-graph-schema-claude.html  finalised-graph-schema-claude.md  finalised-graph-schema-codex.md  thoughtwire-kg-schema-claude.md  thoughtwire-kg-schema-codex.html  thoughtwire-kg-schema-codex.md
(+457 files in other folders)
